tests/SyntaxError/Test22/test22.c
int main(){
	int a=0;
	if (a==5) {
		return a+1;
	}
	else if (a==6);
	

}
